# paypal-agent

./: .env.example  .gitignore  README.md  TUI_GUIDE.md  compose.yaml  main.py  package-lock.json  package.json  pyproject.toml
artifacts/demo/: datazoic_paypal_agent_demo.webm  terminal_demo_transcript.txt
data/paypal_docs/: developer_paypal_com_api_rest.md  developer_paypal_com_docs_api_customer_disputes_v1.md  developer_paypal_com_docs_api_invoicing_v2.md  developer_paypal_com_docs_api_orders_v2.md  developer_paypal_com_docs_api_partner_referrals_v2.md  developer_paypal_com_docs_api_payments_v2.md  developer_paypal_com_docs_api_subscriptions_v1.md  developer_paypal_com_docs_api_transaction_search_v1.md  developer_paypal_com_docs_api_webhooks_v1.md
scripts/: download_paypal_docs.py  evaluate_rag.py  ingest_paypal_docs.py  record_demo.mjs  run_paypal_collection.py
src/paypal_agent/: __init__.py  agent_service.py  api.py  bedrock_agents.py  bedrock_rag.py  cli.py  codex_provider.py  config.py  hybrid_rag.py  local_memory.py  model_router.py  package_assets.py  paypal_client.py  pgvector_store.py  postman.py  rag.py  router.py  system_search.py  tool_registry.py  tool_search.py  tracing.py  user_config.py
src/paypal_agent/assets/knowledge_base/: paypal_api_guidance.md
tests/: conftest.py  test_agent_service.py  test_api.py  test_cli.py  test_hybrid_rag.py  test_local_memory.py  test_model_router.py  test_paypal_client.py  test_postman.py  test_provider_config.py  test_ragas_eval.py  test_router.py  test_runner.py  test_tool_search.py  test_tracing.py
(+1 files in other folders)
