[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datazoic-paypal-agent"
version = "0.1.0"
description = "Postman-backed PayPal tool router and execution service."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.68",
    "beautifulsoup4>=4.12",
    "boto3>=1.34",
    "fastapi>=0.115",
    "httpx>=0.27",
    "langchain-community<0.4",
    "langchain-google-vertexai>=3.0",
    "langgraph>=1.2",
    "langsmith>=0.4.43",
    "openai>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "ragas>=0.3",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
paypal-agent = "paypal_agent.cli:main"
paypal-agent-chat = "paypal_agent.cli:main"

[project.optional-dependencies]
dev = [
    "pyright>=1.1",
    "python-docx>=1.1",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
paypal_agent = [
    "assets/knowledge_base/*.md",
    "assets/postman/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = [".", "src"]

[tool.pyright]
exclude = [".venv", "build", "dist", "node_modules"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
